# my_pong

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main  main.cpp  main_old.cpp  makefile  my_pong  notes.md  out  requirements.md  run.sh
include/: Ball.h  Constants.h  Menu.h  Net.h  Paddle.h  Score.h  Vec2.h
lib/: Ball.cpp  Menu.cpp  Net.cpp  Paddle.cpp  Score.cpp  Vec2.cpp
my_pong/: main.cpp  makefile  out
my_pong/include/: Paddle.h
pong_v1/: makefile  out
pong_v2/: makefile  out
pong_v2/include/: Ball.h
